Bug 369163 - Merging selected layers results into new layer with merged data instead of merging them into single layer
Summary: Merging selected layers results into new layer with merged data instead of me...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2016-09-21 16:40 UTC by Raghavendra kamath
Modified: 2016-10-18 14:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Raghavendra kamath 2016-09-21 16:40:25 UTC
This bug introduced in recent master, When a user selects multiple layers then does merge layer either by menu or shortcut Ctrl + E . The merged pixels are added to a new layer rather than merging them into one single layers . The original layers are kept intact.

Reproducible: Always

Steps to Reproduce:
1.Open a document with multiple layers
2.select two or more layers and press ctrl + E

Actual Results:  
new layer is created with merged data without merging exisiting layer

Expected Results:  
merged data should be in one single layer and all other selected layer should not be there.
Comment 1 Halla Rempt 2016-09-26 11:31:44 UTC
I can confirm this issue. It doesn't happen in 3.0.1
Comment 2 Dmitry Kazakov 2016-10-18 14:50:10 UTC
Git commit 65f659d786d945d3ad5f3ba68c19bad6e7956b69 by Dmitry Kazakov.
Committed on 18/10/2016 at 14:49.
Pushed by dkazakov into branch 'master'.

Fix merging multiple layers

Fixes T3870

M  +1    -1    libs/image/kis_layer_utils.cpp

http://commits.kde.org/krita/65f659d786d945d3ad5f3ba68c19bad6e7956b69