Fix merging multiple layers

Fixes T3870
BUG:369163